# lmdb-rs

./: .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  _typos.toml  clippy.toml  deny.toml
crates/bench-compat/: Cargo.toml
crates/bench-compat/src/: lib.rs
crates/bench-diff/: Cargo.toml
crates/bench-diff/src/: main.rs
crates/core/: Cargo.toml
crates/core/benches/: bench_admin.rs  bench_compare.rs  bench_concurrent.rs  bench_cursor.rs  bench_dupsort.rs  bench_read.rs  bench_scaling.rs  bench_txn.rs  bench_write.rs
crates/core/benches/common/: mod.rs
crates/core/examples/: put_profile.rs
crates/core/src/: btree.rs  cmp.rs  cursor.rs  env.rs  error.rs  idl.rs  lib.rs  node.rs  page.rs  txn.rs  types.rs  write.rs
crates/core/tests/: feature_parity.rs  integration.rs  realworld.rs
docs/: dev-guide.md  index.md  perf-journal.md
docs/bench/: README.md  results-2026-04-16-opt.md  results-2026-04-16.md
docs/bench/baselines/: README.md
docs/research/: lmdb-architecture.md  rust-ecosystem.md
specs/: final-features-design.md  index.md  lmdb-rs-design.md  lmdb-rs-impl-plan.md  lmdb-rs-prd.md  major-features-design.md  perf-benchmark-design.md  remaining-features-design.md
