[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
readme = "README.md"

[workspace.dependencies]
bitflags = "2.11"
libc = "0.2"
memmap2 = "0.9"
thiserror = "2.0.18"
tracing = "0.1"

# dev
tempfile = "3.27"

# workspace crates
lmdb-rs-core = { path = "crates/core" }
